Fix game progress alignment; Count participants;

--- a/app/common/components/game-progress/game-progress.styl
+++ b/app/common/components/game-progress/game-progress.styl
@@ -20,6 +20,11 @@
 
     &.-selectable
         .mark
+            width 21px
+            height 21px
+            text-align center
+            box-sizing border-box
+
             &:hover
                 cursor pointer
 
